src/objects/TaskDetail__c.object
<CustomObject>
    <fields>
        <fullName>Is_Created_By_Mangaer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Created By Mangaer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PerComplete__c</fullName>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <label>Task Id</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Task Details</relationshipLabel>
        <relationshipName>Task_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Task Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>